# Coder-s_Cafe

./: config.py  populate_db.py  pyproject.toml
app/: __init__.py  forms.py
app/forms/: __init__.py  menu_form.py  order_form.py
app/models/: __init__.py  models.py
app/routes/: __init__.py  menu.py  order.py
app/static/: styles.css
app/static/CSS/: invoice.css
app/templates/: base.html  invoice.html  menu.html  order.html  order_success.html
instance/: cafemanager.db
